--- a/module-3/index6.html
+++ b/module-3/index6.html
@@ -130,8 +130,8 @@
 
 
    <!--jQuery (Boostrap JS depends on it)-->
-   <script src="jsCoursera/jquery-3.5.1.min.js"></script>
-   <script src="jsCoursera/bootstrap.min.js"></script>
-   <script src="jsCoursera/script.js"></script>
+   <script src="jquery-3.5.1.min.js"></script>
+   <script src="bootstrap.min.js"></script>
+   <script src="script.js"></script>
 </body>
 </html>
