--- a/module-3/index6.html
+++ b/module-3/index6.html
@@ -9,7 +9,7 @@
   <!-- <link rel="stylesheet" href="CssCoursera/style.css"> -->
   <link href="https://fonts.googleapis.com/css2?family=Oxygen:wght@300;400;700&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
-<link rel="stylesheet" href="CssCoursera/styleMD2.css">
+<link rel="stylesheet" href="styleMD2.css">
 
 </head>
 
